--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
-spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.url=jdbc:postgresql://localhost:5432/shoxvlog_asosiy
+spring.datasource.username=shoxvlog_asosiy
+spring.datasource.password=T7mnDz3Pc9X4Ryez
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+
+security.jwt.secret-key=ABCdefghijklmn123456654311SalomVassalomVaXayr
+security.jwt.expirationDate=21600000
+security.jwt.expirationDateRememberMe=72000000
